{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 418,
  "lineage": "4ec8e263-eaf9-692f-20ae-577affcdc3fc",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f101aa7c01dd75d7",
            "domain": "vpc",
            "id": "eipalloc-0dc205f1604f9e2f1",
            "instance": "i-0faec3719827468be",
            "network_interface": "eni-015ff8651772c2b1a",
            "private_dns": "ip-172-16-10-101.us-west-2.compute.internal",
            "private_ip": "172.16.10.101",
            "public_dns": "ec2-52-32-116-206.us-west-2.compute.amazonaws.com",
            "public_ip": "52.32.116.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.foo",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "module.ec2.aws_instance.foo"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04590e7389a6e577c",
            "arn": "arn:aws:ec2:us-west-2:995686029593:instance/i-0faec3719827468be",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0faec3719827468be",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-015ff8651772c2b1a"
              }
            ],
            "primary_network_interface_id": "eni-015ff8651772c2b1a",
            "private_dns": "ip-172-16-10-101.us-west-2.compute.internal",
            "private_ip": "172.16.10.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-031573871c6ebaa4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bba9224c0ae90d4",
            "tags": {
              "Name": "praveen"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08e617bfc0db44f7e",
              "sg-0d3a9db029c6099dc"
            ]
          },
          "dependencies": [
            "aws_network_interface.foo",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09f4ece42ca1ae948",
            "owner_id": "995686029593",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0717c923a8488cdc7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-015ff8651772c2b1a",
            "mac_address": "02:17:91:7f:37:1e",
            "private_ip": "172.16.10.101",
            "private_ips": [
              "172.16.10.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d3a9db029c6099dc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bba9224c0ae90d4",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-025451643ede1adc7",
            "mac_address": "02:0c:7c:2a:8b:bc",
            "private_ip": "172.16.10.216",
            "private_ips": [
              "172.16.10.216"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d3a9db029c6099dc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bba9224c0ae90d4",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet-private-routing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ce40b4ccb66fbb5",
            "owner_id": "995686029593",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f4ece42ca1ae948",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0717c923a8488cdc7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assso",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0969074d8c067766d",
            "route_table_id": "rtb-03ce40b4ccb66fbb5",
            "subnet_id": "subnet-00bba9224c0ae90d4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.subnet-private-routing",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:995686029593:security-group/sg-08e617bfc0db44f7e",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-08e617bfc0db44f7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "995686029593",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0717c923a8488cdc7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:995686029593:subnet/subnet-00bba9224c0ae90d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-00bba9224c0ae90d4",
            "map_public_ip_on_launch": false,
            "owner_id": "995686029593",
            "tags": {
              "Name": "tf-example"
            },
            "vpc_id": "vpc-0717c923a8488cdc7"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:995686029593:vpc/vpc-0717c923a8488cdc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0b7d3e9dfa81ed2cc",
            "default_route_table_id": "rtb-0ba7b033471a76646",
            "default_security_group_id": "sg-0d3a9db029c6099dc",
            "dhcp_options_id": "dopt-0822a7d47b3d5f28a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0717c923a8488cdc7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba7b033471a76646",
            "owner_id": "995686029593",
            "tags": {
              "Name": "tf-example"
            }
          }
        }
      ]
    }
  ]
}